# docs/parsedOpenAPI.json
@@ -50,8 +50,8 @@
           "eventCount": {
             "type": "number"
           },
-          "latestEventDate": {
-            "type": "number"
+          "latestEventDatetime": {
+            "type": "string"
           },
           "createdAt": {
             "type": "number"
